# fabric-toolbox

./: .gitignore  README.md  TRIGGER_MIGRATION_FIX.md  package-lock.json  package.json  test-output.txt
tools/FabricDataFactoryMigrationAssistant/: .gitignore  ACTIVITY_TRANSFORMER_GUIDE.md  CLI_OVERVIEW.md  CLI_README.md  CONNECTOR_MAPPING.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  FEATURE_GAP_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  NEW_FEATURES.md  PHASE1_COMPLETION_REPORT.md  QUICK_REFERENCE.md  README.md  STANDALONE_CLI_SUMMARY.md  SYNAPSE_SUPPORT.md  TESTING.md  TEST_COMPLETION_CHECKLIST.md  TEST_DESIGN_SUMMARY.md  TEST_INDEX.md  azuredeploy.json  azuredeploy.parameters.json  cli_migrator.py  demo_cli.py  example_usage.py  index.html  package-lock.json  package.json  pyproject.toml  requirements-cli.txt  setup_cli.bat  setup_cli.sh  staticwebapp.config.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
tools/FabricDataFactoryMigrationAssistant/.github/: dependabot.yml  run.py
tools/FabricDataFactoryMigrationAssistant/.github/workflows/: azure-static-web-apps-happy-flower-00182b91e.yml  azure-static-web-apps.yml
tools/FabricDataFactoryMigrationAssistant/adf_fabric_migrator/: README.md  __init__.py  activity_transformer.py  adf_migrator.py  arm_template.json  connector_mapper.py  custom_activity_resolver.py  global_parameter_detector.py  global_parameter_transformer.py  models.py  parser.py  resolution.json  simulate_migration  transformer.py
tools/FabricDataFactoryMigrationAssistant/adf_fabric_migrator/adf_fabric_migrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/FabricDataFactoryMigrationAssistant/adf_fabric_migrator/samples/: README.md  fabric_api_request_template.json  sample_adf_arm_template.json  sample_fabric_pipeline.json
tools/FabricDataFactoryMigrationAssistant/adf_fabric_migrator/tests/: __init__.py  test_activity_transformer.py  test_connector_mapper.py  test_global_parameter_detector.py  test_parser.py  test_transformer.py
tools/FabricDataFactoryMigrationAssistant/examples/: connection_config_example.json
tools/FabricDataFactoryMigrationAssistant/public/: v1Connections.json
tools/FabricDataFactoryMigrationAssistant/src/: App.tsx  ErrorFallback.tsx  buildValidator.ts  index.css  main.css  main.tsx
tools/FabricDataFactoryMigrationAssistant/src/__tests__/: compilation-test.ts
tools/FabricDataFactoryMigrationAssistant/src/components/: ConnectorConfiguration.tsx  ScopeDebugPanel.tsx  TokenDebugInfo.tsx  TokenDebugPanel.tsx  WizardLayout.tsx  WorkspaceDisplay.tsx
tools/FabricDataFactoryMigrationAssistant/src/contexts/: AppContext.tsx
tools/FabricDataFactoryMigrationAssistant/src/hooks/: use-mobile.ts  useWizardNavigation.ts  useWorkspaceOperations.ts
tools/FabricDataFactoryMigrationAssistant/src/lib/: authUtils.ts  connectionDeploymentServiceTest.ts  connectorMappingTest.ts  connectorSkipDecisionTests.ts  debounce.ts  enhancedMappingSuggestions.ts  integrationTests.ts  msalConfig.ts  msalTenantUtils.ts  nullValidationTest.ts  pipelineLinkedServiceTest.ts  scopeValidation.ts  skipDecisionValidation.ts  stateValidation.ts  systemValidator.ts  testHelpers.ts  utils.ts  validation.ts
tools/FabricDataFactoryMigrationAssistant/src/services/: activityTransformer.ts  adfParserService.ts  authService.ts  componentMappingService.ts  componentValidationService.ts  connectionDeploymentService.ts  connectionService.ts  connectionsListService.ts  connectorMappingService.ts  connectorService.ts  connectorSkipDecisionService.ts  copyActivityTransformer.ts  customActivityMappingService.ts  customActivityTransformer.ts  deleteActivityTransformer.ts  dynamicConnectorService.ts  existingConnectionsService.ts  fabricApiClient.ts  fabricConnectionsService.ts  fabricRateLimiter.ts  fabricService.ts  fabricWorkspaceService.ts  folderAnalysisService.ts  folderDeploymentService.ts  gatewayService.ts  getMetadataActivityTransformer.ts  globalParameterDetectionService.ts  hdinsightActivityTransformer.ts  invokePipelineService.ts  linkedServiceConnectionService.ts  linkedServiceMappingBridgeService.ts  lookupActivityTransformer.ts  managedIdentityService.ts  parameterizedLinkedServiceDetectionService.ts  pipelineActivityAnalysisService.ts  pipelineConnectionTransformer.ts  pipelineConnectionTransformerService.ts  (+9 more)
tools/FabricDataFactoryMigrationAssistant/tests/: conftest.py  test_cli_integration_final.py  test_cli_migrator.py  test_integration.py
tools/dbt-fabric/: CONTRIBUTING.md  README.md  pyproject.toml  test.env.sample  zensical.toml
tools/dbt-fabric/docs/: authentication.md  catalog-stats.md  cluster-by.md  compatibility.md  configuration.md  external-tables.md  features.md  index.md  installation.md  lakehouse.md  limitations.md  purview-integration.md  python-models.md  statistics.md  warehouse-snapshots.md
tools/dbt-fabric/tests/: _python_model_livy_capture.py  conftest.py
tools/fabric-assessment-tool/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  tox.toml
tools/fabric-assessment-tool/.devcontainer/: devcontainer.json
tools/fabric-assessment-tool/.github/: copilot-instructions.md  databricks-platform.md  html-generator.md
tools/fabric-assessment-tool/docs/: query_results.md
tools/fabric-assessment-tool/resources/: assessment_analysis.ipynb  fabric_assessment_tool-0.0.1-py3-none-any.whl  fabric_assessment_tool-0.2.0-py3-none-any.whl  fabric_assessment_tool-0.2.1-py3-none-any.whl  fabric_assessment_tool-0.2.2-py3-none-any.whl
tools/fabric-assessment-tool/scripts/: demo.sh  install_dev_container_dependencies.sh
(+3857 files in other folders)
